# tideline

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  WRITEUP.md  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py  mcp_server.py  metrics.py  models.py  noaa.py  ratelimit.py  schemas.py  seed.py  seed_demo.py  service.py
backend/app/routers/: overview.py  stations.py
backend/tests/: conftest.py  test_export.py  test_history.py  test_integration.py  test_mcp_server.py  test_metrics.py  test_noaa_client.py  test_overview.py  test_predictions.py  test_ratelimit.py  test_readings.py  test_service_concurrency.py  test_stations.py
docs/adr/: 0001-read-through-cache.md  0002-sqlite-first-portable-sql.md  0003-naive-utc-timestamps.md  0004-in-process-rate-limiting-and-metrics.md  0005-retry-only-transient-noaa-failures.md  0006-mcp-server-shares-read-path.md  0007-imperative-webgl-globe-outside-react.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: screenshot.mjs
frontend/src/: App.tsx  api.ts  index.css  theme.ts  types.ts  vendor.d.ts
frontend/src/components/: Controls.tsx  Globe.tsx  GlobeHero.tsx  ReadingsChart.tsx  SourceBadge.tsx  StatTiles.tsx  StationMap.tsx  SurgeChart.tsx  globeScene.ts
frontend/src/lib/: globe.test.ts  globe.ts  tides.test.ts  tides.ts  urlState.test.ts  urlState.ts
