[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tideline-backend"
version = "0.1.0"
description = "FastAPI backend for Tideline: cached NOAA tides & water data"
requires-python = ">=3.11"
# Pinned to the versions the suite is green against, so `pip install` is
# reproducible for a reviewer and in CI. Bump deliberately.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "pydantic-settings==2.14.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "respx==0.23.1",
    "ruff==0.15.21",
    "mypy==2.2.0",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
# Entry points and the __main__ CLI guard aren't exercised by the suite.
omit = ["app/__init__.py"]
exclude_also = ['if __name__ == "__main__":']

[tool.mypy]
python_version = "3.11"
files = ["app"]
warn_redundant_casts = true
warn_unused_ignores = true
